--- a/online_quiz/templates/General_knowledge.html
+++ b/online_quiz/templates/General_knowledge.html
@@ -4,7 +4,7 @@
 
 <span id = "timer" style="float: right;">
 </span>
-<form action="/result/" method="post" class="demoForm">{% csrf_token %}
+<form action="../result/" method="post" class="demoForm">{% csrf_token %}
 {% for test in Test %}
   <div class="row">
     <div class="col-md-10">
