--- a/online_quiz/templates/secret_page.html
+++ b/online_quiz/templates/secret_page.html
@@ -5,6 +5,6 @@
 <h1> Welcome to Online Test Portal</h1>
 <p>Descriptions</p>
 <p>rules & regulation </p>
-<button><a href="{% url 'General_knowledge'% }">Start Test</a></button>
+<button><a href="/test/1">Start Test</a></button>
 
 {% endblock %}
