--- a/online_quiz/templates/base.html
+++ b/online_quiz/templates/base.html
@@ -50,9 +50,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'secret2' %}">Reports</a>
             </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
               <a class="nav-link" href="/test/1">Test</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="{% url 'feedback' %}">Give your Feedback</a>
             </li>
