--- a/online_quiz/templates/base.html
+++ b/online_quiz/templates/base.html
@@ -22,7 +22,7 @@
         <link href="/static/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
         <!-- END GLOBAL MANDATORY STYLES -->
         <!-- BEGIN PAGE LEVEL PLUGINS -->
-        <link href="/static//assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" type="text/css" />
+        <link href="/static/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" type="text/css" />
         <!-- END PAGE LEVEL PLUGINS -->
         <!-- BEGIN THEME GLOBAL STYLES -->
         <link href="/static/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
@@ -35,7 +35,7 @@
         <link href=" /static/assets/layouts/layout5/css/layout.min.css" rel="stylesheet" type="text/css" />
         <link href="/static/assets/layouts/layout5/css/custom.min.css" rel="stylesheet" type="text/css" />
         <!-- END THEME LAYOUT STYLES -->
-        <link rel="shortcut icon" href="favicon.ico" />
+        <!-- <link rel="shortcut icon" href="favicon.ico" /> -->
         {%block head_block%}
         {% endblock%}
     </head>
