--- a/online_quiz/templates/profile.html
+++ b/online_quiz/templates/profile.html
@@ -55,7 +55,7 @@
                                                             <i class="icon-home"></i> Profile Overview </a>
                                                         </li>
                                                         <li>
-                                                            <a href="/profileEdit">
+                                                            <a href="{% url 'profileEdit' %}">
                                                             <i class="icon-settings"></i> Profile Settings </a>
                                                         </li>
                                                     </ul>
